@@ -1,3 +1,9 @@
+2005-11-20  Titus Brown  <t@issola.caltech.edu>
+
+	* Switched to using pullparser to extract title in utils.
+
+	* Increased code coverage of unit tests significantly.
+
 2005-11-19  Titus Brown  <t@issola.caltech.edu>
 
 	* Fixed 'code' command to display non-numeric codes from get_code()
